# Stratum_OLD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  license.txt  setup.bat  setup.sh  shadercompiler.cpp  shaders.cmake  stratum.aps  stratum.cmake  stratum.rc  vkcave.cmake  vkcave.cpp
Assets/: bear.obj.REMOVED.git-id  dragon.obj.REMOVED.git-id  heightmap.png.REMOVED.git-id  island.obj.REMOVED.git-id  sky.hdr  sunset.hdr.REMOVED.git-id  venice_sunset_8k.hdr.REMOVED.git-id
Assets/Models/: arm.gltf  boxmodel.fbx  bush_01.fbx  clothgrid.fbx  clothgrid16.fbx  clothgrid32.fbx  clothgrid8.fbx  cornellbox.gltf  dragon.skel  grass_clump_01.fbx  oaktree.fbx  room.fbx.REMOVED.git-id  sphere.fbx  suzanne.fbx  wasp.skel  wasp.skin
Assets/Models/head/: head.skel  head.skin  head1.morph  head2.morph
Assets/Models/rock/: rock.fbx  rock_nrm.png.REMOVED.git-id
Assets/Models/room/: Carpet01_col.png.REMOVED.git-id  Carpet01_nrm.png.REMOVED.git-id  Carpet01_rgh.png.REMOVED.git-id  Concrete04_AO-Concrete04_rgh.png.REMOVED.git-id  Concrete04_col.png.REMOVED.git-id  Concrete04_nrm.png.REMOVED.git-id  CrohnsProtoRoom.gltf  Fabric01_col.png.REMOVED.git-id  Fabric01_nrm.png.REMOVED.git-id  Fabric01_rgh.png.REMOVED.git-id  (+7 more)
Assets/Textures/: lebombo_2k.hdr.REMOVED.git-id  ocean hdri.jpg.REMOVED.git-id  old_outdoor_theater_4k.hdr.REMOVED.git-id  paul_lobe_haus_8k.hdr.REMOVED.git-id  photo_studio_01_2k.hdr.REMOVED.git-id  sky.hdr.REMOVED.git-id  studio_small_03_4k.hdr.REMOVED.git-id
Assets/adam/: Adam_Arms_a.png.REMOVED.git-id  Adam_Arms_n.png.REMOVED.git-id  Adam_Arms_sg.png.REMOVED.git-id  Adam_Head_a.png.REMOVED.git-id  Adam_Head_n.png.REMOVED.git-id  Adam_Head_o.png.REMOVED.git-id  Adam_Head_sg.png.REMOVED.git-id  Adam_Legs_a.png.REMOVED.git-id  Adam_Legs_n.png.REMOVED.git-id  Adam_Legs_o.png.REMOVED.git-id  Adam_Legs_sg.png.REMOVED.git-id  Adam_Torso_a.png.REMOVED.git-id  Adam_Torso_n.png.REMOVED.git-id  Adam_Torso_sg.png.REMOVED.git-id  Adam_mask_intact_n.png.REMOVED.git-id  adam.gltf  adam_data.bin.REMOVED.git-id
Assets/dirt/: ground3_col.jpg.REMOVED.git-id
Assets/dirt_03/: dirt_03_col.png.REMOVED.git-id  dirt_03_msk.png.REMOVED.git-id  dirt_03_nrm.png.REMOVED.git-id
Assets/grass/: grass1_col.png.REMOVED.git-id
Assets/rock/: rock13_col.jpg.REMOVED.git-id
Assets/rock_mesh/: rock_col.png.REMOVED.git-id
Assets/tree/: bark_col.png.REMOVED.git-id  bark_msk.png.REMOVED.git-id  bark_nrm.png.REMOVED.git-id
Assets/uh60/: uh60.fbx
Content/: Animation.cpp  Animation.hpp  Asset.hpp  AssetDatabase.cpp  AssetDatabase.hpp  AssetManager.cpp  AssetManager.hpp  Font.cpp  Font.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
Core/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSet.cpp  DescriptorSet.hpp  Device.cpp  Device.hpp  DeviceManager.cpp  DeviceManager.hpp  EnginePlugin.hpp  Framebuffer.cpp  Framebuffer.hpp  Input.cpp  Input.hpp  Instance.cpp  Instance.hpp  PluginManager.cpp  PluginManager.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler.hpp  Socket.cpp  Socket.hpp  Window.cpp  Window.hpp
Input/: InputDevice.hpp  InputManager.cpp  InputManager.hpp  MouseKeyboardInput.cpp  MouseKeyboardInput.hpp
Interface/: TextButton.cpp  TextButton.hpp  TextLabel.cpp  TextLabel.hpp  UICanvas.cpp  UICanvas.hpp  UIElement.cpp  UIElement.hpp  UIImage.cpp  UIImage.hpp  UILabel.cpp  UILabel.hpp  UILayout.cpp  UILayout.hpp  UISlider.hpp  VerticalLayout.cpp  VerticalLayout.hpp
Math/: Geometry.hpp  Math.hpp  Noise.hpp
Plugins/: CMakeLists.txt
Plugins/BRDFView/: BRDFView.cpp  CMakeLists.txt
Plugins/CameraControl/: CMakeLists.txt  CameraControl.cpp  CameraControl.hpp
Plugins/DicomVis/: CMakeLists.txt  Dicom.cpp  Dicom.hpp  DicomVis.cpp  DicomVis.hpp  ImageLoader.cpp  ImageLoader.hpp
Plugins/DicomVis/Shaders/: precompute.hlsl  volume.hlsl
Plugins/Environment/: CMakeLists.txt  Environment.cpp  Environment.hpp
Plugins/MeshView/: CMakeLists.txt  ClothRenderer.cpp  ClothRenderer.hpp  MeshView.cpp
Plugins/MeshViewer/: CMakeLists.txt  MeshViewer.cpp  SplineRenderer.cpp  SplineRenderer.hpp
Plugins/OpenVR/: CMakeLists.txt  OpenVR.cpp  OpenVR.hpp  OpenVRDevice.cpp  OpenVRDevice.hpp
Plugins/PointCloud/: CMakeLists.txt  PointCloud.cpp  PointRenderer.cpp  PointRenderer.hpp
Plugins/Raytracing/: CMakeLists.txt  Raytracing.cpp
Plugins/Starmap/: CMakeLists.txt  Starmap.cpp  Starmap.hpp  TelnetClient.cpp  TelnetClient.hpp
Plugins/TerrainSystem/: CMakeLists.txt  IndexCache.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp  TerrainSystem.cpp  TerrainSystem.hpp  TriangleFan.hpp  blog.md
Plugins/TerrainSystem/Shaders/: terrain.hlsl  terraincompute.hlsl
Plugins/XR/: CMakeLists.txt  XR.cpp  XR.hpp
Scene/: BVH.hpp  Bvh.hpp  Bvh2.cpp  Bvh2.hpp  Camera.cpp  Camera.hpp  ClothRenderer.cpp  ClothRenderer.hpp  Collider.hpp  Environment.cpp  Environment.hpp  GUI.cpp  GUI.hpp  Gizmos.cpp  Gizmos.hpp  Interactable.hpp  Interface.cpp  Interface.hpp  Light.cpp  Light.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Object.cpp  Object.hpp  ObjectBvh2.cpp  ObjectBvh2.hpp  RaycastReceiver.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  SkinnedMeshRenderer.cpp  SkinnedMeshRenderer.hpp  SplineRenderer.cpp  SplineRenderer.hpp  TextRenderer.cpp  TextRenderer.hpp  TriangleBvh2.cpp  TriangleBvh2.hpp
Shaders/: bezier.hlsl  brdf.hlsli  cloth.hlsl  color.hlsl  font.hlsl  gizmo.hlsl  leaves.hlsl  line.hlsl  noise.hlsli  pbr.hlsl  pbr.hlsli  points.hlsl  postprocess.hlsl  scatter.hlsl  scatter.hlsli  shadercompat.h  shadow.hlsl  skinner.hlsl  skybox.hlsl  terrain.hlsl  terraincompute.hlsl  ui.hlsl  util.hlsli  volume.hlsl  volume_compute.hlsl
Shaders/include/: brdf.hlsli  disney.hlsli  noise.hlsli  scatter.hlsli  shadercompat.h  shadow.hlsli  util.hlsli
Stratum/: ShaderCompiler.cpp  ShaderCompiler.hpp  Stratum.cpp
Util/: Geometry.hpp  Profiler.cpp  Profiler.hpp  Tokenizer.cpp  Tokenizer.hpp  Util.hpp
exec/: shadercompiler.cpp  vkcave.cpp
run/: shadercompiler.cpp  vkcave.cpp
(+28 files in other folders)
