cmake_minimum_required (VERSION 2.8)

add_library(DicomVis MODULE "DicomVis.cpp" "ImageLoader.cpp")
link_plugin(DicomVis)

if(WIN32)
	if(DEFINED ENV{DCMTK_HOME})
		message(STATUS "Found DCMTK_HOME: $ENV{DCMTK_HOME}")
	else()
		message(FATAL_ERROR "Error: DCMTK_HOME not set!")
	endif()
	target_include_directories(DicomVis PUBLIC "$ENV{DCMTK_HOME}/include")
	target_link_directories(DicomVis PUBLIC "$ENV{DCMTK_HOME}/lib")
	target_link_libraries(DicomVis "opengl32.lib" "ws2_32.lib" "wsock32.lib" "shlwapi.lib" "iphlpapi.lib" "netapi32.lib" "propsys.lib")
	target_link_libraries(DicomVis "ofstd.lib" "oflog.lib" "dcmdata.lib" "dcmimgle.lib")
else()
	target_link_libraries(DicomVis "libz.so" "libofstd.so" "liboflog.so" "libdcmdata.so" "libdcmimgle.so")
endif()

add_shader_target(DicomShaders "Shaders/")
add_dependencies(DicomVis DicomShaders)